# sto_project

./: .env  .gitignore  README.md  package-lock.json  package.json
contract/ft-contract/: build.sh
contract/ft-contract/src/: lib.rs
contract/market-contract/neardev/: dev-account  dev-account.env
contract/market-contract/src/: external.rs  ft.rs  internal.rs  lib.rs  nft_callbacks.rs  sale.rs  sale_views.rs
contract/neardev/: dev-account  dev-account.env
contract/nft-contract/: build.sh
contract/nft-contract/neardev/: dev-account  dev-account.env
contract/nft-contract/src/: approval.rs  lib.rs
contract/tests/: Cargo.toml
contract/tests/src/: helpers.rs  integration-tests.rs
frontend/: App.js  index.html  index.js  package-lock.json  package.json  start.sh
frontend/.parcel-cache/: 3d694d14f39909c6  a5de32a6051bfa11  d03bba54a655be5c.txt  d43c1a783b32ded4  lock.mdb
frontend/src/: GlobalStyle.jsx  near-wallet.js
frontend/src/components/: Button.jsx  Input.jsx
frontend/src/components/Header/: Authorize.jsx  Header.jsx
frontend/src/components/Pages/: AssetRegister.jsx  STBuy.jsx  STMarket.jsx  STSell.jsx
